[build-system]
requires = [
    'setuptools'
]
build-backend = 'setuptools.build_meta'

[project]
name = "{project_name}"
version = "{project_version}"
authors = [
    { name = "{author}" },
]
description = "{description}"
readme = "README.rst"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "aiohttp",
    "browser-cookie3",
    "jeepney",
    "jellyfish",
    "mss",
    "numpy",
    "opencv-python",
    "pymongo",
    "plotly",
    "sympy",
    "kaleido"
]

[project.urls]
Homepage = "https://github.com/{author}/{project_name}"

[tool.setuptools.package-data]
"*" = [
    "*"
]
